# liballoc

./: meson.build
include/: liballoc.h
include/internal/: util.h
src/: liballoc.c  util.c
test/: liballoc_test.c
